site/content/docs/v1.4/cli-reference/velero_delete_restore.md
---
layout: docs
title: velero delete restore
---
Delete restores

```
velero delete restore [NAMES] [flags]
```

### Examples

```
	# delete a restore named "restore-1"
	velero restore delete restore-1

	# delete a restore named "restore-1" without prompting for confirmation
	velero restore delete restore-1 --confirm

	# delete restores named "restore-1" and "restore-2"
	velero restore delete restore-1 restore-2

	# delete all restores labelled with foo=bar"
	velero restore delete --selector foo=bar
	
	# delete all restores
	velero restore delete --all
```

### Options

```
      --all                      Delete all restores
      --confirm                  Confirm deletion
  -h, --help                     help for restore
  -l, --selector labelSelector   Delete all restores matching this label selector (default <none>)
```

### Options inherited from parent commands

```
      --add_dir_header                   If true, adds the file directory to the header
      --alsologtostderr                  log to standard error as well as files
      --features stringArray             Comma-separated list of features to enable for this Velero process. Combines with values from $HOME/.config/velero/config.json if present
      --kubeconfig string                Path to the kubeconfig file to use to talk to the Kubernetes apiserver. If unset, try the environment variable KUBECONFIG, as well as in-cluster configuration
      --kubecontext string               The context to use to talk to the Kubernetes apiserver. If unset defaults to whatever your current-context is (kubectl config current-context)
      --log_backtrace_at traceLocation   when logging hits line file:N, emit a stack trace (default :0)
      --log_dir string                   If non-empty, write log files in this directory
      --log_file string                  If non-empty, use this log file
      --log_file_max_size uint           Defines the maximum size a log file can grow to. Unit is megabytes. If the value is 0, the maximum file size is unlimited. (default 1800)
      --logtostderr                      log to standard error instead of files (default true)
  -n, --namespace string                 The namespace in which Velero should operate (default "velero")
      --skip_headers                     If true, avoid header prefixes in the log messages
      --skip_log_headers                 If true, avoid headers when opening log files
      --stderrthreshold severity         logs at or above this threshold go to stderr (default 2)
  -v, --v Level                          number for the log level verbosity
      --vmodule moduleSpec               comma-separated list of pattern=N settings for file-filtered logging
```

### SEE ALSO

* [velero delete](velero_delete.md)	 - Delete velero resources

